# excel_to_pydict

./: py_sample_file.xlsx  sample_file.xlsx  setup.py
excel_to_pydict/: _native__ffi.py
excel_to_pydict.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
rust/test/: invalid_file.docx  no_sheet1.xlsx  products.xlsx
